# surrealx

./: .gitignore  BUILDING.md  Cargo.toml  README.md
examples/: basic.rs
integration/transformations/v2.0/: transform.sh
scripts/: integrate.sh
surrealx/: Cargo.toml
surrealx/examples/: basic.rs
surrealx/src/: cache.rs  error.rs  events.rs  functions.rs  lib.rs  module.rs  server.rs
