[package]
name = "surrealx"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Extension framework for SurrealDB - Add custom functions, events, and modules"
keywords = ["surrealdb", "database", "extension", "framework"]
categories = ["database"]

[dependencies]
# SurrealDB Server (will be integrated when transformation is complete)
# surrealdb-server = { path = "../surrealdb/crates/server" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dependencies.redis]
workspace = true
optional = true

[features]
default = []
redis-cache = ["redis"]

[dev-dependencies]
tokio-test = "0.4"
